; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/aio/aiop/extr_aiop.c_disk_getsize.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/aio/aiop/extr_aiop.c_disk_getsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIOCGMEDIASIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"ioctl(DIOCGMEDIASIZE)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @disk_getsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @disk_getsize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @DIOCGMEDIASIZE, align 4
  %6 = call i64 @ioctl(i32 %4, i32 %5, i64* %3)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @err(i32 1, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i64, i64* %3, align 8
  ret i64 %11
}

declare dso_local i64 @ioctl(i32, i32, i64*) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
